--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,6 +8,11 @@
     "strict": true,
     "esModuleInterop": true,
     "isolatedModules": true,
-    "skipLibCheck": true
+    "skipLibCheck": true,
+    "baseUrl": ".",
+    "paths": {
+      "@/*": ["./*"],
+      "~/*": ["./*"]
+    }
   }
 }
